--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 body {
   background: ##939ab5;
-  color: ##dcdfe6;
+  color: #dcdfe6;
   font-family: 'Lato';
   font-size: 17px;
   font-weight: bold;
