--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 body {
-  background: ##939ab5;
+  background: #939ab5;
   color: #dcdfe6;
   font-family: 'Lato';
   font-size: 17px;
